# Production-Grade-RAG-System

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
agents/: graph.py
api/: main.py
config/: config.yaml
data/example data/text_files/: ML.txt  python_intro.txt
data/ingestion/: data_loader.py
embeddings/: embedder.py
llm/: llm_wrapper.py
retriever/: reranker.py  retriever.py
ui/: app.py
vector_store/: faiss_db.py
